// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow to disable lazy-render prop 1`] = `
<div class="van-tabs__content">
  <div role="tabpanel"
       class="van-tab__pane"
       style="display: none;"
  >
  </div>
  <div role="tabpanel"
       class="van-tab__pane"
       style="display: none;"
  >
  </div>
</div>
`;

exports[`should allow to disable lazy-render prop 2`] = `
<div class="van-tabs__content">
  <div role="tabpanel"
       class="van-tab__pane"
       style
  >
    Text
  </div>
  <div role="tabpanel"
       class="van-tab__pane"
       style="display: none;"
  >
    Text
  </div>
</div>
`;

exports[`should allow to set name prop 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist"
         class="van-tabs__nav van-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div role="tab"
           class="van-tab van-tab--active"
           tabindex="0"
           aria-selected="true"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title1
        </span>
      </div>
      <div role="tab"
           class="van-tab"
           tabindex="-1"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title2
        </span>
      </div>
      <div role="tab"
           class="van-tab van-tab--disabled"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title3
        </span>
      </div>
      <div class="van-tabs__line"
           style="transform: translateX(50px) translateX(-50%);"
      >
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel"
         class="van-tab__pane"
         style
    >
      Text
    </div>
    <div role="tabpanel"
         class="van-tab__pane"
         style="display: none;"
    >
    </div>
    <div role="tabpanel"
         class="van-tab__pane"
         style="display: none;"
    >
    </div>
  </div>
</div>
`;

exports[`should emit rendered event after tab is rendered 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "style": CSSStyleDeclaration {
    "_importants": Object {},
    "_length": 0,
    "_onChange": [Function],
    "_values": Object {},
  },
  "wrapperElement": <div
    class="van-tab__pane"
    role="tabpanel"
    style=""
  >
    
    Text
    
  </div>,
}
`;

exports[`should not render empty tab 1`] = `
<div class="van-tabs__content">
</div>
`;

exports[`should render badge prop correctly 1`] = `
<div role="tab"
     class="van-tab van-tab--active"
     tabindex="0"
     aria-selected="true"
>
  <div class="van-badge__wrapper">
    <span class="van-tab__text van-tab__text--ellipsis">
    </span>
    <div class="van-badge van-badge--fixed">
      10
    </div>
  </div>
</div>
`;

exports[`should render nav-left、nav-right slot correctly 1`] = `
<div class="van-tabs__wrap">
  <div role="tablist"
       class="van-tabs__nav van-tabs__nav--line"
       aria-orientation="horizontal"
  >
    Custom nav left
    <div role="tab"
         class="van-tab van-tab--active"
         tabindex="0"
         aria-selected="true"
    >
      <span class="van-tab__text van-tab__text--ellipsis">
        Title
      </span>
    </div>
    <div class="van-tabs__line"
         style="transform: translateX(50px) translateX(-50%);"
    >
    </div>
    Custom nav right
  </div>
</div>
`;

exports[`should switch tab after click the tab title 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist"
         class="van-tabs__nav van-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div role="tab"
           class="van-tab van-tab--active"
           tabindex="0"
           aria-selected="true"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title1
        </span>
      </div>
      <div role="tab"
           class="van-tab"
           tabindex="-1"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title2
        </span>
      </div>
      <div role="tab"
           class="van-tab van-tab--disabled"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title3
        </span>
      </div>
      <div class="van-tabs__line"
           style="transform: translateX(50px) translateX(-50%);"
      >
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel"
         class="van-tab__pane"
         style
    >
      Text
    </div>
    <div role="tabpanel"
         class="van-tab__pane"
         style="display: none;"
    >
    </div>
    <div role="tabpanel"
         class="van-tab__pane"
         style="display: none;"
    >
    </div>
  </div>
</div>
`;

exports[`should switch tab after click the tab title 2`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist"
         class="van-tabs__nav van-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div role="tab"
           class="van-tab"
           tabindex="-1"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title1
        </span>
      </div>
      <div role="tab"
           class="van-tab van-tab--active"
           tabindex="0"
           aria-selected="true"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title2
        </span>
      </div>
      <div role="tab"
           class="van-tab van-tab--disabled"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title3
        </span>
      </div>
      <div class="van-tabs__line"
           style="transform: translateX(50px) translateX(-50%); transition-duration: 0.3s;"
      >
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel"
         class="van-tab__pane"
         style="display: none;"
    >
      Text
    </div>
    <div role="tabpanel"
         class="van-tab__pane"
         style
    >
      Text
    </div>
    <div role="tabpanel"
         class="van-tab__pane"
         style="display: none;"
    >
    </div>
  </div>
</div>
`;

exports[`swipe switch tab after swiping tab content 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist"
         class="van-tabs__nav van-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div role="tab"
           class="van-tab van-tab--active"
           tabindex="0"
           aria-selected="true"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title1
        </span>
      </div>
      <div role="tab"
           class="van-tab"
           tabindex="-1"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title2
        </span>
      </div>
      <div role="tab"
           class="van-tab van-tab--disabled"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title3
        </span>
      </div>
      <div class="van-tabs__line"
           style="transform: translateX(50px) translateX(-50%);"
      >
      </div>
    </div>
  </div>
  <div class="van-tabs__content van-tabs__content--animated">
    <div class="van-swipe van-tabs__track">
      <div style="transition-duration: 0ms; transform: translateX(0px); width: 300px;"
           class="van-swipe__track"
      >
        <div class="van-swipe-item van-tab__pane-wrapper"
             role="tabpanel"
             aria-hidden="false"
             style="width: 100px;"
        >
          <div class="van-tab__pane">
            Text
          </div>
        </div>
        <div class="van-swipe-item van-tab__pane-wrapper van-tab__pane-wrapper--inactive"
             role="tabpanel"
             aria-hidden="true"
             style="width: 100px;"
        >
          <div class="van-tab__pane">
            Text
          </div>
        </div>
        <div class="van-swipe-item van-tab__pane-wrapper van-tab__pane-wrapper--inactive"
             role="tabpanel"
             aria-hidden="true"
             style="width: 100px;"
        >
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`swipe switch tab after swiping tab content 2`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist"
         class="van-tabs__nav van-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div role="tab"
           class="van-tab"
           tabindex="-1"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title1
        </span>
      </div>
      <div role="tab"
           class="van-tab van-tab--active"
           tabindex="0"
           aria-selected="true"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title2
        </span>
      </div>
      <div role="tab"
           class="van-tab van-tab--disabled"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title3
        </span>
      </div>
      <div class="van-tabs__line"
           style="transform: translateX(50px) translateX(-50%);"
      >
      </div>
    </div>
  </div>
  <div class="van-tabs__content van-tabs__content--animated">
    <div class="van-swipe van-tabs__track">
      <div style="transition-duration: 300ms; transform: translateX(-100px); width: 300px;"
           class="van-swipe__track"
      >
        <div class="van-swipe-item van-tab__pane-wrapper van-tab__pane-wrapper--inactive"
             role="tabpanel"
             aria-hidden="true"
             style="width: 100px;"
        >
          <div class="van-tab__pane">
            Text
          </div>
        </div>
        <div class="van-swipe-item van-tab__pane-wrapper"
             role="tabpanel"
             aria-hidden="false"
             style="width: 100px;"
        >
          <div class="van-tab__pane">
            Text
          </div>
        </div>
        <div class="van-swipe-item van-tab__pane-wrapper van-tab__pane-wrapper--inactive"
             role="tabpanel"
             aria-hidden="true"
             style="width: 100px;"
        >
          <div class="van-tab__pane">
            Text
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`swipe switch tab after swiping tab content 3`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist"
         class="van-tabs__nav van-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div role="tab"
           class="van-tab"
           tabindex="-1"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title1
        </span>
      </div>
      <div role="tab"
           class="van-tab van-tab--active"
           tabindex="0"
           aria-selected="true"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title2
        </span>
      </div>
      <div role="tab"
           class="van-tab van-tab--disabled"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          title3
        </span>
      </div>
      <div class="van-tabs__line"
           style="transform: translateX(50px) translateX(-50%); transition-duration: 0.3s;"
      >
      </div>
    </div>
  </div>
  <div class="van-tabs__content van-tabs__content--animated">
    <div class="van-swipe van-tabs__track">
      <div style="transition-duration: 300ms; transform: translateX(-200px); width: 300px;"
           class="van-swipe__track"
      >
        <div class="van-swipe-item van-tab__pane-wrapper van-tab__pane-wrapper--inactive"
             role="tabpanel"
             aria-hidden="true"
             style="width: 100px;"
        >
          <div class="van-tab__pane">
            Text
          </div>
        </div>
        <div class="van-swipe-item van-tab__pane-wrapper"
             role="tabpanel"
             aria-hidden="false"
             style="width: 100px;"
        >
          <div class="van-tab__pane">
            Text
          </div>
        </div>
        <div class="van-swipe-item van-tab__pane-wrapper van-tab__pane-wrapper--inactive"
             role="tabpanel"
             aria-hidden="true"
             style="width: 100px;"
        >
          <div class="van-tab__pane">
            Text
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
